[gd_scene load_steps=7 format=3 uid="uid://bp41o377i1p0e"]

[ext_resource type="Script" uid="uid://vijtycpahrpb" path="res://scenes/intro.gd" id="1_4bx60"]
[ext_resource type="AudioStream" uid="uid://dicjwqem3srji" path="res://audio/intro.wav" id="1_ioskq"]
[ext_resource type="Texture2D" uid="uid://baeppj4nayuft" path="res://textures/intro4.png" id="2_yjqpq"]
[ext_resource type="Texture2D" uid="uid://cpo5t0l0ove84" path="res://textures/intro1.png" id="3_es01l"]
[ext_resource type="Texture2D" uid="uid://dxj7cdlcjkm0y" path="res://textures/intro2.png" id="4_0naf5"]
[ext_resource type="Texture2D" uid="uid://bata8ljjnv2ju" path="res://textures/intro3.png" id="5_bu1yb"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bx60")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ioskq")
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect1" type="TextureRect" parent="CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_es01l")

[node name="TextureRect2" type="TextureRect" parent="CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_0naf5")

[node name="TextureRect3" type="TextureRect" parent="CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_bu1yb")

[node name="TextureRect4" type="TextureRect" parent="CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_yjqpq")
